[gd_scene load_steps=6 format=3 uid="uid://2schd5seyyh"]

[ext_resource type="Script" path="res://src/main_menu/main_menu.gd" id="1_qvmvy"]
[ext_resource type="FontFile" uid="uid://ix6f0ekut8gh" path="res://assets/fonts/Blackwood Castle.ttf" id="2_r8bfk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pxynp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_33hws"]
bg_color = Color(0.196078, 0.196078, 0.196078, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_me1rs"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_pxynp")
script = ExtResource("1_qvmvy")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonStart" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_r8bfk")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_33hws")
theme_override_styles/hover = SubResource("StyleBoxFlat_me1rs")
text = "Start"

[node name="ButtonToggleSound" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_r8bfk")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_33hws")
theme_override_styles/hover = SubResource("StyleBoxFlat_me1rs")
text = "ToggleSound"

[node name="ButtonExit" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_r8bfk")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_33hws")
theme_override_styles/hover = SubResource("StyleBoxFlat_me1rs")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/ButtonToggleSound" to="." method="_on_button_toggle_sound_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
